--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT = 3005
+PORT = 3000
 DB_CNN=mongodb+srv://admin:123@cluster0.zvv4g.mongodb.net/hospitaldb
+JWT_SECRET=jolacomoestasjajajajajxdsuper5genial5asd
