--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT = 3000
 DB_CNN=mongodb+srv://admin:123@cluster0.zvv4g.mongodb.net/hospitaldb
 JWT_SECRET=jolacomoestasjajajajajxdsuper5genial5asd
+GOOGLE_ID=619976017122-07lqvf67dgvb5n9abo6po71fl9be86pe.apps.googleusercontent.com
+GOOGLE_SECRET=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
