--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-   "name": "backend-serve",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "start:dev": "nodemon index.js"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "ISC",
-   "dependencies": {
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.0",
-      "express": "^4.17.3",
-      "express-fileupload": "^1.3.1",
-      "express-validator": "^6.14.0",
-      "google-auth-library": "^8.0.2",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^6.2.10",
-      "uuid": "^8.3.2"
-   }
+  "name": "backend-serve",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start:dev": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
+    "express-validator": "^6.14.0",
+    "google-auth-library": "^8.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.10",
+    "uuid": "^8.3.2"
+  }
 }
